# hostelive

./: LICENSE
backend/: .env.example  .gitignore  db.sqlite3  pyproject.toml  requirements.txt  test.py
backend/accounts/: admin.py  models.py  serializers.py  urls.py
backend/accounts/apis/: auth.py  profile.py
backend/config/: drf_conf.py  jazzmin_conf.py  settings.py  urls.py
backend/listings/: admin.py  agent.py  agent_data.py  filters.py  models.py  permissions.py  urls.py
backend/listings/apis/: agent.py  agentData.py  facilities.py  feedback.py  listingTypes.py  property.py  rooms.py
backend/listings/serializers/: facilities.py  feedback.py  listingTypes.py  property.py  room.py
backend/utils/: exceptions.py  pagination.py  renderers.py  response.py
hostelive_app/: README.md  pubspec.yaml
hostelive_app/android/app/: build.gradle.kts
hostelive_app/ios/Runner/: Info.plist
hostelive_app/ios/Runner.xcodeproj/: project.pbxproj
hostelive_app/lib/: constant.dart  main.dart
hostelive_app/lib/screen/: add_property.dart  add_room.dart  home_screen.dart  login_screen.dart  profile_detail.dart  propertydetail.dart  room_list.dart  signup_page.dart  student_dashboard.dart  student_property_detail.dart
hostelive_app/linux/: CMakeLists.txt
hostelive_app/linux/runner/: my_application.cc
hostelive_app/macos/Runner.xcodeproj/: project.pbxproj
hostelive_app/test/: widget_test.dart
hostelive_app/web/: index.html  manifest.json
hostelive_app/windows/: CMakeLists.txt
hostelive_app/windows/runner/: Runner.rc  main.cpp
(+4 files in other folders)
